--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "Project Name"
+name = "{{PROJECT_NAME}}"
 version = "0.1.0"
 description = "Description"
-authors = ["Author Name"]
+authors = ["{{AUTHOR}}"]
 readme = "README.md"
 package-mode = false 
 
