--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,6 @@ pytest = "^8.4.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.extras]
+internal = []
