--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12,<3.14"
+isort = "^6.0.1"
+black = "^25.9.0"
+pytest = "^8.4.2"
+pre-commit = "^4.3.0"
+pylint = "^3.3.8"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
