--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-*.ipynb
+# *.ipynb
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
