Feature: Add nbstripout package used to avoid pushing notebook results in git

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pytest = "^8.4.2"
 pre-commit = "^4.3.0"
 pylint = "^3.3.8"
 # ext_dep = {path = "external-dist/external-repo-0.1.0-py3-none-any.whl", optional = true}
+nbstripout = "^0.8.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
